# navi-rs

./: Cargo.toml
navi-cli/: Cargo.toml
navi-cli/src/: main.rs
navi-rs/: Cargo.toml
navi-rs/src/: lib.rs  main.rs  pflow.rs
navi-wasm/: Cargo.toml  navi-rs.html
navi-wasm/src/: lib.rs  utils.rs
recipes/: Cargo.toml
recipes/src/: fcts.rs  lib.rs
