[workspace]
resolver = "3"
members = [
    "recipes",
    "navi-rs",
    "navi-cli",
    "navi-wasm",
]

[workspace.package]
authors = ["kljh <code@main2.fr>"]
edition = "2024"
version = "0.0.1"

[workspace.dependencies]
nalgebra = "0.33.2"
recipes = { path = "recipes" }
navi-rs = { path = "navi-rs" }
