[workspace]
resolver = "3"
members = [
    "recipes",
    "navi-rs",
    "navi-cli",
    "navi-wasm",
]

[workspace.package]
authors = ["kljh <code@main2.fr>"]
edition = "2024"
version = "0.0.1"

[workspace.dependencies]
nalgebra = { version = "0.33.2" }
navi-rs = { path = "navi-rs" }
recipes = { path = "recipes" }
serde = { version = "1.0" }